docs/style.css
body {
	max-width: 1000px;
	margin: 0 auto;
	padding: 0 1em 20vh;
	min-height: 100vh;
	color: #ACABAB;
	background: #192837;
	font-family: Arial, Helvetica, Verdana, sans-serif;
	text-align: left;
	font-size: 0.875em;
    line-height: 1.6em;

	display: flex;
	flex-direction: column;
	justify-content: center;
}

#app-main {
	display: flex;
	flex-direction: column;
	align-items: center;
}

a {
	color: #ACABAB;
	text-decoration: underline dotted;
	text-decoration-thickness: 1px;
	text-decoration-color: #636D78;
	cursor: pointer;
}

a:hover {
	text-decoration: underline;
}

h1 {
	color: #EEE;
	font-family: "Garamond", serif;
}

h2 {
	color: #EEE;
}

input[type="checkbox"] {
	transform: scale(1.2);
}

.text-button {
	font-size: 1.15em;
	color: #DDD;
	background-color: #0C448B;
	padding: 0.3em 0.5em;
	border-radius: 5px;
	cursor: pointer;
}

.text-button:hover {
	background-color: #115FC2;
	box-shadow: 0 0 5px rgba(0, 96, 223, 0.5);
}

.eye {
	border: 0px solid #0060DF;
	border-radius: 10px;
	padding: 0 1px;
	color: rgba(0, 0, 0, 0.9);
	cursor: pointer;
	opacity: 0.3;
}

.enabled .eye {
	background-color: #0060DF;
	opacity: 1;
}

.expanded .eye {
	background-color: #0060DF;
	opacity: 1;
}

/*
.eye:hover {
	background-color: #115FC2;
	box-shadow: 0 0 5px rgba(0, 96, 223, 0.5);
}
*/

.toggle-button {
	font-size: 1.15em;
	color: #DDD;
	padding: 2px 6px 2px 4px;
	border-radius: 5px;
	border: 1px solid grey;
	background-color: #14212D;
	cursor: pointer;
	white-space: nowrap;

	> *:not(:nth-child(1)) {
		margin-left: 2px;
	}
}

	@media (max-width : 768px) {
		.toggle-button {
			font-size: 1.3em;
		}
		.toggle-button {
			font-size: 1.3em;
			padding: 0.5em;
		}
	}

.toggle-button:hover {
	border-color: #007BFF;
	box-shadow: 0 0 5px rgba(0, 96, 223, 0.5);
}

.toggle-button.fully-enabled {
	background-color: #0D3460;
}

#top-menu {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	width: 100%;
	height: 40px;
	background-color: #14212D;
	color: #EEE;
	line-height: 1.2em;

	#link-section {
		height: 100%;
		display: flex;
		flex-direction: row;
		justify-content: flex-end;
		align-items: center;

		.top-link {
			display: flex;
			align-items: center;
			justify-content: center;
			width: 40px;
			height: 100%;
			background-color: #0C448B;
			border-radius: 5px;

			img {
				opacity: 0.9;
			}
		}

		.top-link:hover {
			background-color: #115FC2;
			box-shadow: 0 0 5px rgba(0, 96, 223, 0.5);
		}
	}

	#profile-section {
		display: flex;
		flex-direction: row;
		justify-content: flex-end;
		align-items: center;

		> * {
			margin-right: 0.5em;
		}
	}
}

#TOC {
    line-height: 1.2em;
	display: flex;
	flex-direction: column;
	align-items: center;

	.acts {
		display: flex;
		flex-wrap: wrap;
		/*justify-content: flex-start;*/
		justify-content: center;
	}

	.act {
		margin: 0 1em;
	}

	.act .title {
		text-align: center;
	}

	.progress-header {
		display: flex;
		justify-content: space-between;
		padding: 0;
		margin: 0;
		opacity: 0.5;

		> *:not(:nth-child(1)) {
			margin-left: 10px;
		}
	}

	.progress-header.active {
		opacity: 1;
	}
}

.progress {
	margin: 1px;
	margin-left: 0.5em;
	border: 1px solid grey;
	border-radius: 5px;
	padding: 0 2px;
}

.progress.started {
	border: 1px solid orange;
}

.progress.completed {
	border: 1px solid green;
}

#options {
	margin-top: 1em;

	fieldset {
		border: none;
	}

	fieldset > .content {
		display: flex;
		flex-wrap: wrap;
		flex-direction: row;
	}

	.main-option {
		margin-top: 5px;
		margin-right: 5px;
	}

	.filter {
		position: relative;

		.subfilters {
			overflow: hidden;
			max-height: 0;
			transition: max-height 0.2s ease-out;
			position: absolute;
			z-index: 1000;
		}

		.subfilters .arrow {
			display: inline-block;
			width: 1.5em;
			text-align: center;
		}
	}
}

.faded {
	opacity: 0.3;
}

#checklist {
	width: 100%;
	min-height: 50vh;

	.header {
		width: 100%;
		display: flex;
		flex-direction: row;
		align-items: center;
		padding: 0.75em 0;
		margin: 0.5em 0;
		color: #EEE;
		opacity: 0.3;

		> * {
			margin-left: 0.5em;
		}

		.progress-header {
			display: flex;
			flex-direction: row;
			align-items: center;
			padding-left: 0.5em;
		}

		.title {
			font-size: 2em;
		}
	}

	.expanded > .header {
		opacity: 1;
	}

	.meta-container > .header {
		justify-content: center;
	}

	.container > .header {
		background-color: #14212D;

		.clear-button {
			margin-right: 1em;
			margin-left: auto;
		}
	}

	.content {
		display: flex;
		flex-direction: column;
		overflow: hidden;

		.tip {
			border: 1px solid #606A73;
			border-radius: 5px;
			padding: 8px;
			text-align: center;
			margin: 0 auto 0.5em;
			max-width: 60%;
		}

		@media (max-width : 768px) {
			.tip {
				max-width: 100%;
			}
		}
	}

	.coordinates {
		font-family: 'Linux Libertine','Times New Roman',serif;
		text-shadow: 1px 1px 2px #000,-1px -1px 2px #000;
		color: #AB9F89;
		background: #34323285;
		border-radius: 5px;
		padding: 3px 5px;
		box-shadow: 1px 1px 5px #00000030;
		white-space: nowrap;
	}
}

.entry {
	display: flex;
	flex-direction: row;
	padding: 3px 5px 0;
	gap: 5px;
	margin-left: 3em;

	.checkbox, .title, .desc {
		margin-top: 1em;
	}

	.title {
		width: 120px;
		flex-grow: 0;
		flex-shrink: 0;
	}
}

.entry.hide-image {
	padding-top: 0.5em;
	padding-bottom: 0.5em;

	.checkbox, .title, .desc {
		margin-top: 0;
	}

	.img {
		display: none;
	}
}

.entry.indented {
	margin-left: 6em;
}

@media (max-width : 768px) {
	.entry {
		margin-left: 0;

		.title {
			width: 100px;
		}
	}

	.entry.indented {
		margin-left: 3em;
	}
}

.entry.top-tier {
	background: #193847;
}

.entry.completed {
	opacity: 0.5;
	text-decoration: line-through;
	background: none;
}

.entry.uncommon {
	img {
		background-image: linear-gradient(to bottom, rgba(1, 189, 57, 0.2), rgba(1, 189, 57, 0.0));
	}
	.title a {
		color: #01bd39;
	}
}

.entry.rare {
	img {
		background-image: linear-gradient(to bottom, rgba(1, 191, 255, 0.2), rgba(1, 191, 255, 0.0));
	}
	.title a {
		color: #01bfff;
	}
}

.entry.very-rare {
	img {
		background-image: linear-gradient(to bottom, rgba(209, 1, 123, 0.2), rgba(209, 1, 123, 0.0));
	}
	.title a {
		color: #d1017b;
	}
}

.entry.legendary {
	img {
		background-image: linear-gradient(to bottom, rgba(183, 134, 29, 0.2), rgba(183, 134, 29, 0.0));
	}
	.title a {
		color: #b7861d;
	}
}

.entry.story {
	img {
		background-image: linear-gradient(to bottom, rgba(255, 160, 55, 0.2), rgba(255, 160, 55, 0.0));
	}
	.title a {
		color: #ffa037;
	}
}

#back-to-top {
	position: fixed;
	bottom: 20px;
	right: 20px;
	z-index: 1000;
	padding: 0.8em;
	border: none;
	visibility: hidden;
	opacity: 0;
	transition: opacity 0.2s ease-in-out;
}

.custom-select {
	position: relative;
	display: inline-block;
	font-size: 14px;

	label {
		margin-right: 0.5em;
	}

	select {
		/* Remove default browser appearance */
		-webkit-appearance: none;
		-moz-appearance: none;
		appearance: none;

		/* Basic modern box styling */
		font-size: 14px;
		display: inline-block;
		border: 1px solid grey;
		border-radius: 5px;
		padding-left: 0.5em;
		background-color: #14212D;
		color: #EEE;
		line-height: 2;
		cursor: pointer;
		width: 150px;
		box-sizing: border-box; /* Ensure padding doesn't affect width */
		transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
	}

	select:hover {
		outline: none;
		border-color: #007BFF;
		box-shadow: 0 0 5px rgba(0, 96, 223, 0.5);
	}

	select:focus {
		outline: none;
		border-color: #007BFF;
		box-shadow: 0 0 5px rgba(0, 96, 223, 0.5);
	}

	/* Hiding the default arrow in Internet Explorer/Edge */
	select::-ms-expand {
		display: none;
	}
}

.custom-select::after {
	content: '▼';
	position: absolute;
	top: 50%;
	right: 15px;
	transform: translateY(-50%);

	/* Styling the arrow */
	color: #333;
	font-size: 10px;

	/* Ensure the arrow doesn't interfere with clicks on the select */
	pointer-events: none;
}

.search-input-wrapper {
    display: flex;
	flex-direction: row;

	.search-input {
		margin-right: 5px;
		padding: 6px 10px;
		font-family: "Open Sans", sans-serif;
		font-size: 1.15em;
		border: 1px solid grey;
		border-radius: 5px;
		color: #EEE;
		background-color: #14212D;
		width: 300px;
		box-sizing: border-box; /* Ensure padding doesn't affect width */
		transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
	}

	.search-input::placeholder {
		color: #999;
		opacity: 0.8;
	}

	.search-input:focus {
		outline: none;
		border-color: #007BFF;
		box-shadow: 0 0 5px rgba(0, 96, 223, 0.5);
	}

	.search-input:not(:placeholder-shown) {
		background-color: #0D3460;
	}

	#clear-button {
		display: none;
	}

	.search-input:not(:placeholder-shown) + #clear-button {
		display: block;
	}

	.clear-button:hover {
		color: #999;
	}
}

.highlighted {
	background-color: rgba(0, 96, 223, 0.7);
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
	-webkit-user-select: none; /* Safari */
	 -khtml-user-select: none; /* Konqueror HTML */
	   -moz-user-select: none; /* Old versions of Firefox */
	    -ms-user-select: none; /* Internet Explorer/Edge */
	        user-select: none; /* Non-prefixed version, currently
	                              supported by Chrome, Edge, Opera and Firefox */
}

